<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MonaSocial</string>
    <string-array name="category_array">
        <item>NewsFeed</item>
        <item>Ourvle</item>
        <item>SAS</item>
        <item>Search Engine</item>
        <item>Navigation</item>
    </string-array>


    <string name="title_section1">NewsFeed</string>
    <string name="title_section2">Ourvle</string>
    <string name="title_section3">Sas</string>
    <string name="title_section4">Search Engine</string>
    <string name="title_section5">Navigation</string>
    <string name="banner_ad_unit_id">ca-app-pub-7406673040779336/1443439002</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Quick Search</string>
    <string name="action_settings">Details</string>
    <string name="action_websearch">Web search</string>
    <string name="action_back">Go Back</string>

    <string name="action_home">Home Screen</string>
    <string name="action_up">Top Of List</string>





    <string name="title_activity_maps">Map</string>
</resources>
